<resources>
    <string name="app_name">Oasis-Android-Temi</string>
    <string name="go_homebase">홈베이스로 이동중</string>
    <string name="go_table">%1$s번 자리로 이동중</string>
    <string name="dot">.</string>
    <string name="ex_text">몇</string>
    <string name="arrive">도착 완료</string>
    <string name="arrive_msg">음식을 받으신 후에 복귀버튼을 눌러주세요.</string>
    <string name="back">복귀</string>
    <string name="order_list">주문 목록</string>
    <string name="ex_text_2">음식 이름</string>
    <string name="cnt">개</string>
    <string name="num">번</string>
    <string name="move">이동</string>
    <string name="exxample_money_text">00000</string>
    <string name="won">원</string>
    <string name="registration">등록</string>
    <string name="qr_registration_text">큐알을 등록해 주세요</string>
</resources>